--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,14 +14,15 @@
 </ul>
 
  <img src="portfolio.jpg" alt="Uh oh! Image not found" class="center">
+
  <table border="1">
       <tr>
-        <td>HTML/CSS</td>
-      <td>
-      <a href="HTML_CSS.html"><img src="Screenshot 2018-11-27 at 5.12.23 PM.png" alt="Uh oh! Image not found" style="width:500px; height: 400px;" class="active">
+        <td>HTMl</td>
+        <td><a href="HTML_CSS.html"><img src="Screenshot 2018-11-27 at 5.12.23 PM.png" alt="Uh oh! Image not found" style="width:500px; height: 400px;" class="active"></td>
+      </tr> 
+      <tr>
+        <td>Mario Game Remix</td>
+        <td><a href="mario_game1.html"><img  src="maio game 1.png" alt="Uh Oh! Image not found" style="width:500px; height: 400px;" class="active"><td>
 </td>
-
-
-
   </body>
 </html>
