--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,4 +23,8 @@
       <tr>
         <td>Mario Game Remix</td>
         <td><a href="mario_game1.html"><img  src="maio game 1.png" alt="Uh Oh! Image not found" style="width:500px; height: 400px;" class="active"><td>
+       <tr>
+        <td>Mario Game Remix</td>
+        <td><a href="interactive.fic.html"><img  src="interactive.fic.png" alt="Uh Oh! Image not found" style="width:500px; height: 400px;" class="active"><td>
+        </tr>
 </td>
